...
            "state" : "translated",
            "value" : "自分のアラームを設定"
          }
        }
      }
    },
    "내 정보 · 앱 설정" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "My info · App settings"
...
            "state" : "translated",
            "value" : "娘"
          }
        }
      }
    },
    "목록에서 다시 골라 주세요" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please choose again from the list"
...
            "state" : "translated",
            "value" : "声を選んでください"
          }
        }
      }
    },
    "문구 정보" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Message info"
...
            "state" : "translated",
            "value" : "無料プランはここでは適用できません"
          }
        }
      }
    },
    "문구" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Message"
...
            "state" : "translated",
            "value" : "再アップロード"
          }
        }
      }
    },
    "저장" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
...
            "state" : "translated",
            "value" : "今は選択できないプランです"
          }
        }
      }
    },
    "지역" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Region"
...
            "state" : "translated",
            "value" : "基本のあいさつ"
          }
        }
      }
    },
    "날씨" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Weather"
...
